Added GitHub link

--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
         </form>
         <div class="row">
           <div class="col-6 left">
-            <span
-              ><h3 class="selectedCity" id="city-searched">
-                Tokyo, Japan
-              </h3></span
-            >
+            <span><h3 class="selectedCity" id="city-searched">Tokyo</h3></span>
             <p id="date">January 01, 2023</p>
             <div class="container">
               <div class="row">
@@ -128,6 +124,17 @@
               <i class="fas fa-solid fa-cloud-rain"></i>
             </div>
           </div>
+        </div>
+        <div id="tag">
+          <p class="tag">
+            <a
+              href="https://github.com/chloevillavelez/weather-app"
+              target="_blank"
+            >
+              Open-source code</a
+            >
+            &nbsp;by Chloe Villavelez
+          </p>
         </div>
       </div>
       <script
