Icon changes along with weather description and temperature, added placeholder image

--- a/index.html
+++ b/index.html
@@ -54,13 +54,20 @@
         <div class="row">
           <div class="col-6 left">
             <span><h3 class="selectedCity" id="city-searched">Tokyo</h3></span>
-            <p id="date">Last updated: <span id="time"></span></p>
+            <p id="date">Last updated:<span id="time"></span></p>
             <div class="container">
               <div class="row">
                 <div class="container">
                   <div class="row">
                     <div class="col">
-                      <h2 class="number" id="current-temp">15</h2>
+                      <span class="full-details"
+                        ><img
+                          src="src/icons8-sun-64.png"
+                          alt="sunny"
+                          id="icon"
+                        />
+                        <h2 class="number" id="current-temp">15</h2></span
+                      >
                     </div>
                     <div class="col">
                       <div
