--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="row">
           <div class="col-6 left">
             <span><h3 class="selectedCity" id="city-searched">Tokyo</h3></span>
-            <p id="date">Last updated:<span id="time"></span></p>
+            <p id="date">Last updated: <span id="time"></span></p>
             <div class="container">
               <div class="row">
                 <div class="container">
@@ -75,15 +75,23 @@
                         role="group"
                         aria-label="Basic example"
                       >
-                        <button type="button" class="btn btn-secondary celsius">
-                          <a href="#" id="celsius"> °C </a>
-                        </button>
-                        <button
-                          type="button"
-                          class="btn btn-secondary fahrenheit"
-                        >
-                          <a href="#" id="fahrenheit"> °F </a>
-                        </button>
+                        <div class="btn-group btn-group-sm">
+                          <button
+                            type="button"
+                            class="btn btn-secondary celsius"
+                            class="weather-buttons"
+                          >
+                            <a href="#" id="celsius-link" class="active">
+                              °C
+                            </a>
+                          </button>
+                          <button
+                            type="button"
+                            class="btn btn-secondary fahrenheit"
+                          >
+                            <a href="#" id="fahrenheit-link"> °F </a>
+                          </button>
+                        </div>
                       </div>
                     </div>
                   </div>
