Updated search function

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
           <div class="col-6 right">
             <p class="dsc">Clear Sky</p>
-            <p class="lati">Latitude: <strong id="lat">1.0</strong></p>
-            <p class="longi">Longitude: <strong id="long">1.0</strong></p>
-            <p class="precipitation">Precipitation: <strong>1</strong></p>
+            <p class="lati">Latitude: <strong id="lat"></strong></p>
+            <p class="longi">Longitude: <strong id="long"></strong></p>
+            <p class="precipitation">Precipitation: <strong></strong></p>
             <p class="humidity">
               Humidity: <strong><span id="hum"></span>%</strong>
             </p>
