Updated JS code for forecast

--- a/index.html
+++ b/index.html
@@ -112,12 +112,8 @@
             </p>
           </div>
         </div>
-        <div class="container forecast">
+        <div class="container forecast" id="forecast">
           <div class="row">
-            <div class="col fc">
-              <p class="mon day">MON</p>
-              <i class="fas fa-solid fa-cloud-sun"></i>
-            </div>
             <div class="col fc">
               <p class="tue day">TUE</p>
               <i class="fas fa-regular fa-snowflake"></i>
