Updated min and max weather tags for forecast

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               Humidity: <strong><span id="hum"></span>%</strong>
             </p>
             <p class="wind">
-              Wind: <strong><span id="windy"></span>km/h</strong>
+              Wind: <strong><span id="windy"></span>m/h</strong>
             </p>
           </div>
         </div>
